--- a/index.Rmd
+++ b/index.Rmd
@@ -18,5 +18,7 @@ knitr::include_graphics('images/general/data_science_welcome_sm.jpg')
 ```
 <br />
 
-Welcome to **Principles of Spatial Analysis**, one of the four core modules for the MSc in Geographic and Social Data Science here at [UCL Geography](https://www.geog.ucl.ac.uk/). Content to be made available at the start of the academic year. The content for 2021-2022 has now been archived and can be found here: [[Link]](https://jtvandijk.github.io/GEOG0114_20212022)
+Welcome to **Principles of Spatial Analysis**, one of the four core modules for the MSc in Geographic and Social Data Science here at [UCL Geography](https://www.geog.ucl.ac.uk/). 
+
+Content to be made available at the start of the academic year. The content for 2021-2022 has now been archived and can be found here: [[Link]](https://jtvandijk.github.io/GEOG0114_20212022)
 
