--- a/index.Rmd
+++ b/index.Rmd
@@ -11,14 +11,28 @@ description: "GEOG0114: Principles of Spatial Analysis handbook."
 url: 'https\://jtvandijk.github.io/GEOG0114/'
 ---
 
-# About {-}
+# Module overview {-}
 
 ```{r echo=FALSE, out.width = "100%", fig.align='center', cache=TRUE,}
 knitr::include_graphics('images/general/data_science_welcome_sm.jpg') 
 ```
 <br />
 
-Welcome to **Principles of Spatial Analysis**, one of the four core modules for the MSc in Geographic and Social Data Science here at [UCL Geography](https://www.geog.ucl.ac.uk/). 
+| Week          | Section          | Topic |
+| :---          |:---------        |:------------------ |
+| 1             | Foundational Concepts | [Spatial analysis for data science]() |
+| 2             | Foundational Concepts | [Graphical representation of spatial data]() | 
+| 3             | Foundational Concepts | [Spatial autocorrelation]() | 
+| 4             | Raster data | [Suitability Mapping I]() |
+| 5             | Raster data | [Suitability Mapping II]() |
+|               | **Reading week** | **Reading week** |
+| 6             | Raster data | [Geostatistics]() |
+| 7             | Applied Spatial Analysis | [Transport network analysis]() |
+| 8             | Applied Spatial Analysis | [Geodemographics]() |
+| 9             | Spatial models | [Spatial models I]() | 
+| 10            | Spatial models | [Spatial models II]() | 
 
-Content to be made available at the start of the academic year. The content for 2021-2022 has now been archived and can be found here: [[Link]](https://jtvandijk.github.io/GEOG0114_20212022)
-
+:::note
+**Note** <br />
+This GitHub page contains the material for Week 07 ([Transport network analysis]) and Week 08 ([Geodemographics]) of **Principles of Spatial Analysis** 2022-2023. The content for 2021-2022 has been archived and can be found here: [[Link]](https://jtvandijk.github.io/GEOG0114_20212022)
+:::
