--- a/index.Rmd
+++ b/index.Rmd
@@ -34,5 +34,5 @@ knitr::include_graphics('images/general/data_science_welcome_sm.jpg')
 
 :::note
 **Note** <br />
-This GitHub page contains the material for Week 07 ([Transport network analysis](transport-network-analysis.html#transport-network-analysis.html)) and Week 08 ([Geodemographics]) of **Principles of Spatial Analysis** 2022-2023. The content for 2021-2022 has been archived and can be found here: [[Link]](https://jtvandijk.github.io/GEOG0114_20212022)
+This GitHub page contains the material for Week 07 ([Geodemographics](geodemographics.html)) and Week 07 ([Transport network analysis](transport-network-analysis.html)) of **Principles of Spatial Analysis** 2022-2023. The content for 2021-2022 has been archived and can be found here: [[Link]](https://jtvandijk.github.io/GEOG0114_20212022)
 :::
